# verl

./: README.md  pir_reward.py  process_data.py  pyproject.toml  setup.py  sky_grpo.yaml  sky_grpo_bucket.yaml  sky_grpo_dxml.yaml  sky_grpo_oocr.yaml  sky_grpo_wd.yaml  sys_query_reward.py
data_gen/: pir_data.py  sys_perms.py  sys_query.py
experiments/: pir_seca_sft_step_50_4b_pod.sh  qwen4b_sec_reason_pir_sky.sh  sys_query.sh
experiments/gemma3_1b/: g_1b_struq_ap.sh
experiments/gemma3_4b/: pir_sft_step_50_dxml_4b.sh
experiments/qwen-1.7B/: pir_sft_step_50_oocr_1.7b.sh
experiments/qwen2.5_3b/: pir_sft_step_50_dxml_3b.sh  pir_sft_step_50_dxml_3b_lora.sh
experiments/qwen_1.7b/: pir_sft_step_50_1.7b.sh  pir_sft_step_50_1.7b_struq.sh  pir_sft_step_50_1.7b_struq_ap.sh  pir_sft_step_50_dxml_1.7b.sh  pir_sft_step_50_oocr_1.7b.sh
experiments/qwen_1.7b/probe_type/: pir_sft_step_50_1.7b.sh  pir_sft_step_50_1.7b_oocr_pt_w_v2.sh  pir_sft_step_50_1.7b_pt_w_v2.sh  pir_sft_step_50_1.7b_struq_pt_w.sh  pir_sft_step_50_1.7b_struq_pt_w_ppo.sh  pir_sft_step_50_1.7b_w.sh
experiments/qwen_4b/: 4b_secr_sky_epoch_2.sh  pir_seca_sft_step_50_4b_sky.sh  pir_sft_b_step_50_4b_sky.sh  pir_sft_step_50_1.7b_struq_ap.sh  pir_sft_step_50_4b_ap_pt_or_w.sh  pir_sft_step_50_4b_ap_pt_or_w_wd.sh  pir_sft_step_50_4b_sky.sh  pir_sft_step_50_4b_struq_ap.sh  pir_sft_step_50_4b_struq_ap_pt_or_w.sh  pir_sft_step_50_dxml_4b.sh  pir_sft_step_50_oocr_4b.sh  pir_sft_step_50_oocr_4b_sky.sh  pir_sft_step_50_oocr_4b_sky_wd.sh  qwen4b_sec_reason_pir_grpo.sh  qwen_4b_sys_query_pir_grpo_sky.sh
experiments/qwen_8b/: pir_sft_step_50_dxml_8b_lora.sh
verl/trainer/config/: ppo_trainer.yaml
verl/workers/rollout/vllm_rollout/: vllm_rollout_spmd.py
